[package]
name = "edwardium_logger"
version = "1.0.0"
authors = ["TheEdward162 <theedward162@gmail.com>"]
edition = "2018"
repository = "https://github.com/TheEdward162/edwardium_logger"
documentation = "https://docs.rs/edwardium_logger"
homepage = "https://crates.io/crates/edwardium_logger"
description = "Another simple logger implementation"
license = "MIT/Apache-2.0"
keywords = ["logging", "no_std", "uart"]

[features]
default = ["std", "file_target", "stdout_target", "stderr_target"]

std = ["log/std"]

file_target = ["std"]
stdout_target = ["std"]
stderr_target = ["std"]

uart_target = ["embedded-serial"]

[dependencies]
log = { version = "0.4" }

embedded-serial = { version = "0.5", optional = true }