[package]
name = "edwardium_logger"
version = "1.1.0"
authors = ["TheEdward162 <theedward162@gmail.com>"]
edition = "2018"
repository = "https://github.com/TheEdward162/edwardium_logger"
documentation = "https://docs.rs/edwardium_logger"
homepage = "https://crates.io/crates/edwardium_logger"
description = "Another simple logger implementation"
license = "MIT/Apache-2.0"
keywords = ["logging", "no_std", "uart"]

[features]
default = ["std", "ignore_list", "file_target", "colored_stdout_output", "colored_stderr_output"]

std = ["log/std"]

file_target = ["std"]
stdout_target = ["std"]
stderr_target = ["std"]

colored_logline = ["termion"]
colored_stdout_output = ["stdout_target", "colored_logline"]
colored_stderr_output = ["stderr_target", "colored_logline"]

ignore_list = ["std"]

uart_target = ["embedded-serial"]

[dependencies]
log = { version = "0.4" }

embedded-serial = { version = "0.5", optional = true }

termion = { version = "1", optional = true }